--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
-  "name": "mern_skeleton",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "scripts": {
-    "start": "node backend/server.js",
-    "server": "nodemon backend/server.js",
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Texian/mern_skeleton.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Texian/mern_skeleton/issues"
-  },
-  "homepage": "https://github.com/Texian/mern_skeleton#readme",
-  "dependencies": {
-    "colors": "^1.4.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.4.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.16"
-  }
+	"name": "mern_skeleton",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"start": "node backend/server.js",
+		"server": "nodemon backend/server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Texian/mern_skeleton.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Texian/mern_skeleton/issues"
+	},
+	"homepage": "https://github.com/Texian/mern_skeleton#readme",
+	"dependencies": {
+		"colors": "^1.4.0",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"express-async-handler": "^1.2.0",
+		"mongoose": "^6.4.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.16"
+	}
 }
